syntax = "proto3";

package billing;

option go_package = "proto;billing";

service Billing {
	rpc Portal(PortalRequest) returns (PortalResponse) {}
	// List amendments to be made
	rpc ListAmendments(ListAmendmentRequest) returns (ListAmendmentResponse) {}
}

message PortalRequest {}

message PortalResponse {
	string url = 1;
}
